# embraOS

./: .gitignore  .zenodo.json  CITATION.cff  CONTRIBUTING.md  Cargo.toml  Cargo.toml.phase0  Dockerfile  LICENSE  README.md
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
assets/: embraos-banner.html  kg-multigraph.html
buildroot/: Config.in  external.desc  external.mk
buildroot/configs/: embraos_aarch64_defconfig  embraos_x86_64_defconfig  embraos_x86_64_minimal_defconfig
crates/embra-apid/: Cargo.toml
crates/embra-apid/src/: config.rs  grpc.rs  main.rs  proxy.rs  rest.rs
crates/embra-brain/: Cargo.toml
crates/embra-brain/src/: config.rs  grpc_service.rs  main.rs  migrations.rs  proactive.rs  sessions.rs  tools.rs
crates/embra-brain/src/brain/: feedback_loop_spec_v2.md  identity_render.rs  mod.rs  prompts.rs  soul_render.rs  streaming.rs  types.rs  user_render.rs
crates/embra-brain/src/config/: mod.rs
crates/embra-brain/src/db/: client.rs  mod.rs
crates/embra-brain/src/guardian/: mod.rs  replicant.rs
crates/embra-brain/src/knowledge/: edges.rs  enrichment.rs  mod.rs  node_store.rs  promotion.rs  retrieval.rs  tools.rs  traversal.rs  types.rs
crates/embra-brain/src/learning/: phases.rs  soul.rs
crates/embra-brain/src/migrations/: mod.rs
crates/embra-brain/src/proactive/: mod.rs
crates/embra-brain/src/provider/: ir.rs  mod.rs  schema_util.rs
crates/embra-brain/src/provider/anthropic/: conv.rs  mod.rs  streaming.rs  tool_schema.rs  wire.rs
crates/embra-brain/src/provider/gemini/: cache.rs  conv.rs  mod.rs  streaming.rs  tool_schema.rs  wire.rs
crates/embra-brain/src/provider/openai_compat/: conv.rs  mod.rs  sanitize.rs  streaming.rs  tool_schema.rs  wire.rs
crates/embra-brain/src/sessions/: mod.rs
crates/embra-brain/src/setup/: mod.rs  wizard.rs
crates/embra-brain/src/tools/: cron.rs  engineering.rs  express.rs  guardian.rs  mod.rs  registry.rs  security.rs  sessions.rs
crates/embra-common/: Cargo.toml  build.rs
crates/embra-comp/: Cargo.toml
crates/embra-comp/src/: halt.rs  handlers.rs  input.rs  main.rs  state.rs  tty_udev.rs  winit.rs
crates/embra-console/: Cargo.toml
crates/embra-console-core/: Cargo.toml
crates/embra-console-core/src/: commands.rs  events.rs  grpc.rs  lib.rs  reasoning.rs  render.rs  state.rs  style.rs
crates/embra-console/src/: grpc_client.rs  main.rs  terminal.rs
crates/embra-console/src/terminal/: commands.rs  input.rs  input_layout.rs  mod.rs  render.rs  state.rs  ui.rs
crates/embra-desktop/: Cargo.toml
crates/embra-desktop/src/: editor.rs  main.rs  menu.rs  subscription.rs  theme.rs  view.rs
crates/embra-guardian/: Cargo.toml
crates/embra-guardian/examples/: gen_fixture.rs  spike.rs
crates/embra-guardian/src/: abi.rs  build.rs  caps.rs  error.rs  host.rs  lib.rs  overlay.rs  scaffold.rs  store.rs  validator.rs
crates/embra-guardian/src/guest/: html_text.rs  json.rs  prelude.rs
crates/embra-guardian/tests/: doc_examples_validate.rs  fixture_roundtrip.rs  html_text.rs
crates/embra-guardian/tests/fixtures/: probe.wasm
crates/embra-init/: Cargo.toml
crates/embra-init/src/: main.rs
crates/embra-tool-macro/: Cargo.toml
crates/embra-tool-macro/src/: lib.rs
crates/embra-tool-macro/tests/: derive_emission.rs
crates/embra-tools-core/: Cargo.toml
crates/embra-trustd/: Cargo.toml
crates/embra-trustd/src/: config.rs  main.rs  pki.rs  soul.rs
crates/embra-web/: Cargo.toml  build.rs
crates/embra-web-ui/: Cargo.toml  Trunk.toml  index.html
crates/embra-web-ui/assets/: app.css  embra-term.js
crates/embra-web-ui/src/: app.rs  chat.rs  main.rs  status.rs  term.rs
crates/embra-web/src/: arbiter.rs  assets.rs  chat_bridge.rs  config.rs  main.rs  metrics.rs  pty_bridge.rs  server.rs  sessions.rs  state.rs  status.rs  stop.rs  tls.rs  ws.rs  ws_chat.rs
crates/embrad/: Cargo.toml  build.rs
crates/embrad/src/: config.rs  main.rs  mount.rs  reconcile.rs  supervisor.rs
crates/wardsondb/: .gitignore  API.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md
crates/wardsondb/benches/: bitmap_bench.rs  http_bench.rs  storage_bench.rs
crates/wardsondb/src/: config.rs  error.rs  lib.rs  main.rs
crates/wardsondb/src/engine/: bitmap.rs  collection.rs  document.rs  mod.rs  storage.rs  ttl.rs
crates/wardsondb/src/engine/backend/: fjall_backend.rs  mod.rs  rocksdb_backend.rs
crates/wardsondb/src/index/: mod.rs  primary.rs  secondary.rs
crates/wardsondb/src/query/: aggregate.rs  cursor.rs  distinct.rs  executor.rs  filter.rs  mod.rs  parser.rs  planner.rs  sort.rs
crates/wardsondb/src/schema/: mod.rs
crates/wardsondb/src/server/: metrics.rs  mod.rs  response.rs  ttl_worker.rs
crates/wardsondb/src/server/middleware/: auth.rs  error_handler.rs  metrics_layer.rs  mod.rs  request_id.rs  request_logger.rs
crates/wardsondb/src/server/routes/: collections.rs  documents.rs  indexes.rs  mod.rs  query.rs  system.rs
crates/wardsondb/tests/: bitmap_deadlock_test.rs  integration_test.rs
docs/: AARCH64-BUILD.md  CHANGE-LOG.md  COMMAND-REFERENCE.md  EMBRA-DESKTOP.md  GUARDIAN-ADVANCED-EXAMPLE.md  GUARDIAN-KG-SCAN-EXAMPLE.md  GUARDIAN-TOOL-EXAMPLES.md  INSTALL.md  INTEL-MAC-BUILD.md  KNOWLEDGE-GRAPH.md  OPEN-PROBLEMS.md  OPERATION.md  QUICK-START.md  README.md  RECOMMENDED-LOCAL-MODELS.md  RECOMMENDED-MODELS.md  REPLICANT-CHECK.md  ROADMAP.md  SYSTEM-DESIGN.md  TOOL-REFERENCE.md
embraOS_aarch64_AppleSilicon_Experimental_Build/: EMBRAOS_AARCH64_BUILD_GUIDE.md  build-image-aarch64.sh  create_initramfs.sh  embraos_aarch64_defconfig  run-qemu-aarch64.sh
proto/: apid.proto  brain.proto  common.proto  trust.proto
scripts/: build-image-aarch64.sh  build-image.sh  create_initramfs.sh  embraos-backup-mac.sh  embraos-backup.sh  run-qemu-aarch64.sh  run-qemu.sh  seed-state.sh
src/: lib.rs  main.rs
src/brain/: mod.rs  prompts.rs  streaming.rs
src/config/: mod.rs
src/db/: client.rs  error.rs  mod.rs  process.rs
src/learning/: mod.rs  phases.rs  soul.rs
src/migrations/: mod.rs
src/proactive/: mod.rs
src/sessions/: mod.rs
src/terminal/: commands.rs  (+3 more)
(+32 files in other folders)
