[workspace]
resolver = "2"
members = [
    "crates/embra-init",
    "crates/embrad",
    "crates/embra-apid",
    "crates/embra-trustd",
    "crates/embra-brain",
    "crates/embra-console",
    "crates/embra-common",
    "crates/embra-tool-macro",
    "crates/embra-tools-core",
]

[workspace.package]
version = "0.2.0-phase1"
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/Ward-Software-Defined-Systems/embraOS"

[workspace.dependencies]
# gRPC / Protobuf
tonic = "0.12"
tonic-build = "0.12"
prost = "0.13"
prost-types = "0.13"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client (for WardSONDB REST API)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }

# TLS / Crypto
rcgen = "0.13"
rustls = "0.23"
rustls-pemfile = "2"
sha2 = "0.10"
hex = "0.4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Time
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"

# Error handling
anyhow = "1"
thiserror = "1"

# Tool registry (native tool-use migration)
schemars = "0.8"
inventory = "0.3"
once_cell = "1"

# Shared crate
embra-common = { path = "crates/embra-common" }
