[package]
name = "embra-brain"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
embra-common = { workspace = true }
embra-tool-macro = { path = "../embra-tool-macro" }
embra-tools-core = { path = "../embra-tools-core" }
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
schemars = { workspace = true }
inventory = { workspace = true }
once_cell = { workspace = true }
meval = "0.2"
uuid = { version = "1", features = ["v4"] }
tokio-stream = "0.1"
futures = "0.3"
futures-util = "0.3"
async-trait = "0.1"
libc = "0.2"
base64 = "0.22"

[build-dependencies]
tonic-build = { workspace = true }
