[package]
name = "embra-console-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
embra-common = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
tokio-stream = "0.1"
