[package]
name = "embra-web-ui"
version = "0.5.0-phase1"
edition = "2024"
license = "MPL-2.0"
description = "embraOS web console frontend (Leptos CSR + xterm.js)"

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Location",
    "Event",
    "EventTarget",
    "KeyboardEvent",
    "MouseEvent",
    "Storage",
    "Element",
    "HtmlElement",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
futures-util = "0.3"
gloo-net = { version = "0.6", features = ["http", "websocket"] }
gloo-timers = { version = "0.3", features = ["futures"] }
console_error_panic_hook = "0.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
