[package]
name = "embrad"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
embra-common = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
nix = { version = "0.29", features = ["mount", "fs", "process", "signal"] }
serde = { workspace = true }
serde_json = { workspace = true }
